init/gateway/gateway/healthcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck
spec:
  selector:
    matchLabels:
      app: healthcheck
  template:
    metadata:
      labels:
        app: healthcheck
    spec:
      containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-html
              readOnly: true
      volumes:
        - name: nginx-html
          configMap:
            defaultMode: 420
            name: healthcheck
---
apiVersion: v1
kind: Service
metadata:
  name: healthcheck
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: healthcheck
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthcheck
spec:
  parentRefs:
    - name: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /livez
      backendRefs:
        - name: healthcheck
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
